--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 	}],
 	"require": {
 		"php": "^7.0",
-		"doctrine/migrations": "^1.5"
+		"doctrine/migrations": "^1.5",
+		"doctrine/orm": "^2.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^6.0"
