--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,20 @@
 language: php
-
-sudo: false
-
-cache:
-  directories:
-  - vendor
-
 php:
   - 7.0
   - 7.1
-
+sudo: false
+cache:
+  directories:
+  - vendor
+  
+before_install:
+  - composesr require satooshi/php-coveralls
 install:
   - travis_retry composer install --no-interaction --prefer-source
-
 script:
-  - vendor/bin/phpunit
-
+  - vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
+after_script:
+  - php vendor/bin/coveralls -v
 branches:
   only:
     - master
