--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,15 +1,6 @@
 build:
   environment:
     php:
-      version: 7.0.7
-  tests:
-    override:
-      -
-        command: 'vendor/bin/phpunit --coverage-clover=clover.xml'
-        coverage:
-          file: 'clover.xml'
-          format: 'clover'
+      version: 7.1.1
 checks:
-  php:
-     code_rating: true
-     duplication: true
+  php: true
